--- a/about-dandeli.html
+++ b/about-dandeli.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from designarc.biz/demos/hilltown/theme/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jul 2023 05:50:57 GMT -->
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +8,13 @@
 
     <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Contact Us</title>
+    <title>About Dandeli</title>
 
     <!-- Icon css link -->
+    <link rel="stylesheet" type="text/css" href="akcodewala.com/css_root/flaticon.css">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="vendors/stroke-icon/style.css" rel="stylesheet">
+    <link href="vendors/flat-icon/flaticon.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -29,6 +29,7 @@
     <link href="vendors/owl-carousel/owl.carousel.min.css" rel="stylesheet">
     <link href="vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="vendors/bootstrap-selector/bootstrap-select.css" rel="stylesheet">
+    <link href="vendors/lightbox/simpleLightbox.css" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
@@ -134,100 +135,111 @@
     <!--================Header Area =================-->
 
     <!--================Banner Area =================-->
-    <section class="banner_area_contactus">
+    <section class="banner_area_aboutdandeli">
         <div class="container">
             <div class="banner_inner_content">
-                <h3>Contact Us</h3>
+                <h3>About Dandeli</h3>
                 <ul>
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="contact-us.html">Contact Us</a></li>
+                    <li><a href="about-dandeli.html">about dandeli</a></li>
                 </ul>
             </div>
         </div>
     </section>
     <!--================End Banner Area =================-->
 
-
-    <!--================Get Contact Area =================-->
-    <section class="get_contact_area">
+    <!--================Start Main Area =================-->
+    <br>
+    <section class="activities_title">
         <div class="container">
-            <div class="row get_contact_inner">
-                <div class="col-md-6">
-                    <div class="left_ex_title">
-                        <h2>get in <span>touch</span></h2>
-                    </div>
-                    <form class="contact_us_form row m0" action="contact_process.php" method="post" id="contactForm"
-                        novalidate="novalidate">
-                        <div class="form-group col-md-12">
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Name">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <input type="text" class="form-control" id="number" name="number" placeholder="Phoen no.">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <textarea class="form-control" name="message" id="message" rows="1"
-                                placeholder="Message"></textarea>
-                        </div>
-                        <div class="form-group col-md-12">
-                            <button type="submit" value="submit" class="btn submit_btn form-control">submit now</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-6">
-                    <div class="right_contact_info">
-                        <div class="contact_info_title">
-                            <h3>Contact info</h3>
-                            <p>Have any Queries? Let us know. We will clear it for you at the best.</p>
-                        </div>
-                        <div class="contact_info_list">
-                            <div class="media">
-                                <div class="media-left">
-                                    <i class="fa fa-map-marker"></i>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Office</h4>
-                                    <p>Dandeli, Karnataka <br /> India, 581325</p>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <div class="media-left">
-                                    <i class="fa fa-envelope-o"></i>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Email</h4>
-                                    <a>book@bookmydandeli.com</a>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <div class="media-left">
-                                    <i class="fa fa-phone"></i>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Phone</h4>
-                                    <a>+ (91) 7676281511</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>DANDELI - EMBRACING THE FULLNESS OF EXPERIENCE</h2>
+                <p style="font-size:medium;">Deep Gorges, Enchanting Verdant Forests, Rolling Hills, and Endless
+                    Meandering Rivers - If these
+                    allure your senses, then Dandeli awaits as an irresistible destination. Situated 125 kilometers away
+                    from the renowned tourist spot of Goa, Dandeli emerges as a captivating city nestled within the
+                    Uttara Kannada district of Karnataka.
+                    <br><br>
+                    For the adventure enthusiasts, Dandeli presents an ideal haven for holidays and weekend escapes.
+                    Whether it's the exhilarating white-water rafting on the Kali River, the thrilling mountain biking
+                    amidst hilly terrains, or the chance to encounter majestic tigers and rare avian species, Dandeli
+                    offers a myriad of experiences to captivate your soul amidst the cradle of nature.
+                </p>
             </div>
         </div>
     </section>
-    <!--================End Get Contact Area =================-->
 
-    <!--================Map Area =================-->
-    <section class="contact_map_area">
+    <br>
+    <section class="activities_title">
         <div class="container">
-            <div id="mapBox2" class="mapBox2 row m0" data-lat="15.2667" data-lon="74.6167" data-zoom="12"
-                data-marker="img/map-marker.png" data-info="Dandeli, Karnataka, India." data-mlat="15.2667"
-                data-mlon="74.6167">
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>The Dandeli</h2>
+                <p style="font-size:medium;">Dandeli, its name derived from the legendary Dandakaranya forest in Hindu
+                    mythology, also holds
+                    another tale of the revered local deity, Dandelappa, who sacrificed his life in loyalty to the
+                    Mirashi landlords, bestowing an enduring legacy upon the place.</p>
             </div>
         </div>
     </section>
-    <!--================End Map Area =================-->
+
+    <br>
+    <section class="activities_title">
+        <div class="container">
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>The Urban Center and Its Population</h2>
+                <p style="font-size:medium;">Situated at an elevation of 1551 feet above sea-level amidst the Western
+                    Ghats, Dandeli enjoys ample rainfall, creating a picturesque backdrop. With a population of
+                    approximately 53,000 (as per the 2001 census), the city boasts a male majority of 51 percent and a
+                    commendable literacy rate of 74 percent, surpassing the national average.
+                    <br><br>
+                    Dandeli serves as a thriving hub for migrant workers hailing from various regions of India,
+                    including Uttar Pradesh, Bihar, Rajasthan, and Madhya Pradesh, drawn to the town's vibrant paper
+                    mills that offer livelihood opportunities. The linguistic diversity adds to the city's allure, with
+                    Kannada, Hindi, Marathi, and Konkani being widely spoken, earning it the nickname of "Mini India."
+                    <br><br>
+                    Beyond its lush forests and thrilling adventure activities, Dandeli flaunts a rich cultural tapestry
+                    with historical landmarks and sacred sites like the Ulavi temple, Supa Hydraulic Dam, ancient Kavla
+                    caves, and the captivating Syntheri Rocks. Embrace the chance to create unforgettable memories as
+                    you explore this treasure trove of experiences.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <br>
+    <section class="activities_title">
+        <div class="container">
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>Mobile Networks</h2>
+                <p style="font-size:medium;">Airtel <br>BSNL
+                    <br> Vodafone
+                    <br> Reliance
+                    <br> TATA Docomo
+                    <br> Idea
+                    <br> Spice
+                    <br> Aircel
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <br>
+    <section class="activities_title">
+        <div class="container">
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>BANK AND ATMS</h2>
+                <p style="font-size:medium;">
+                    ICICI <br>
+                    Corporation <br>
+                    Syndicate <br>
+                    Canara Bank <br>
+                    State Bank of India <br>
+                    State Bank of Mysore <br> <br>
+                </p>
+            </div>
+        </div>
+    </section>
+    <!--================End Main Area =================-->
 
     <!--================Footer Area =================-->
     <footer class="footer_area">
@@ -302,70 +314,6 @@
     </footer>
     <!--================End Footer Area =================-->
 
-    <!--================Contact Success and Error message Area =================-->
-    <div id="success" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></span>
-                    <h2 class="modal-title">Thank you</h2>
-                    <p class="modal-subtitle">Your message is successfully sent...</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modals error -->
-
-    <!-- Error Message Modal -->
-    <div id="error" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></span>
-                    <h2 class="modal-title">Error</h2>
-                    <p class="modal-subtitle">There was an error processing your request. Please try again later.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!--================Search Box Area =================-->
-    <div class="search_area zoom-anim-dialog mfp-hide" id="test-search">
-        <div class="search_box_inner">
-            <h3>Search</h3>
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="button"><i class="icon icon-Search"></i></button>
-                </span>
-            </div>
-        </div>
-    </div>
-    <!--================End Search Box Area =================-->
-
-    <div id="error" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></span>
-                    <h2 class="modal-title">Sorry !</h2>
-                    <p class="modal-subtitle"> Something went wrong </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--================End Contact Success and Error message Area =================-->
-
-
-
-
-
-
     <!--================End Footer Area =================-->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-2.2.4.js"></script>
@@ -393,18 +341,12 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
     <script src="js/gmaps.min.js"></script>
 
-    <!-- contact js -->
-    <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/contact.js"></script>
-
     <!-- instafeed-->
     <script type="text/javascript" src="vendors/instafeed/instafeed.min.js"></script>
     <script type="text/javascript" src="vendors/instafeed/script.js"></script>
 
     <script src="js/theme.js"></script>
-</body>
 
-<!-- Mirrored from designarc.biz/demos/hilltown/theme/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jul 2023 05:50:58 GMT -->
+</body>
 
 </html>
