--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>HillTown Resort</title>
+    <title>Home- Come to Dandeli</title>
 
     <!-- Icon css link -->
     <link rel="stylesheet" type="text/css" href="akcodewala.com/css_root/flaticon.css">
@@ -124,12 +124,9 @@
                                     aria-haspopup="true" aria-expanded="false">About Dandeli <i
                                         class="fa fa-chevron-down" aria-hidden="true"></i></a>
                                 <ul class="dropdown-menu">
-                                    <!-- Add link to those resort pages -->
-                                    <li><a href="#">- About Dandeli</a></li>
-                                    <li><a href="#">- Wildlife Sanctuary</a></li>
-                                    <li><a href="#">- When to visit & why?</a></li>
-                                    <li><a href="#">- Do's & Don'ts</a></li>
-                                    <li><a href="#">- How to reach</a></li>
+                                    <li><a href="about-dandeli.html">- About Dandeli</a></li>
+                                    <li><a href="wildlife-sanctuary.html">- Wildlife Sanctuary</a></li>
+                                    <li><a href="when-to-visit.html">- When to visit & why?</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -594,10 +591,9 @@
                                 <h3>Dandeli Info</h3>
                             </div>
                             <ul>
-                                <!-- link to these page. -->
-                                <li><a href="#">- About Dandeli</a></li>
-                                <li><a href="#">- Wildlife Sanctuary</a></li>
-                                <li><a href="#">- When to visit & why?</a></li>
+                                <li><a href="about-dandeli.html">- About Dandeli</a></li>
+                                <li><a href="wildlife-sanctuary.html">- Wildlife Sanctuary</a></li>
+
                             </ul>
                         </aside>
                     </div>
@@ -607,10 +603,8 @@
                                 <h3>Travel Info</h3>
                             </div>
                             <ul>
-                                <!-- link to these pages -->
-                                <li><a href="#">- About Us</a></li>
-                                <li><a href="#">- Do's & Don'ts</a></li>
-                                <li><a href="#">- How to reach</a></li>
+                                <li><a href="about-us.html">- About Us</a></li>
+                                <li><a href="when-to-visit.html">- When to visit & why?</a></li>
                             </ul>
                         </aside>
                     </div>
