--- a/when-to-visit.html
+++ b/when-to-visit.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from designarc.biz/demos/hilltown/theme/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jul 2023 05:50:57 GMT -->
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +8,13 @@
 
     <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Contact Us</title>
+    <title>When to Visit</title>
 
     <!-- Icon css link -->
+    <link rel="stylesheet" type="text/css" href="akcodewala.com/css_root/flaticon.css">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="vendors/stroke-icon/style.css" rel="stylesheet">
+    <link href="vendors/flat-icon/flaticon.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -29,6 +29,7 @@
     <link href="vendors/owl-carousel/owl.carousel.min.css" rel="stylesheet">
     <link href="vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="vendors/bootstrap-selector/bootstrap-select.css" rel="stylesheet">
+    <link href="vendors/lightbox/simpleLightbox.css" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
@@ -134,100 +135,118 @@
     <!--================Header Area =================-->
 
     <!--================Banner Area =================-->
-    <section class="banner_area_contactus">
+    <section class="banner_area_aboutdandeli">
         <div class="container">
             <div class="banner_inner_content">
-                <h3>Contact Us</h3>
+                <h3>When to Visit</h3>
                 <ul>
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="contact-us.html">Contact Us</a></li>
+                    <li><a href="when-to-visit.html">When to visit</a></li>
                 </ul>
             </div>
         </div>
     </section>
     <!--================End Banner Area =================-->
 
-
-    <!--================Get Contact Area =================-->
-    <section class="get_contact_area">
+    <!--================Start Main Area =================-->
+    <br>
+    <section class="activities_title">
         <div class="container">
-            <div class="row get_contact_inner">
-                <div class="col-md-6">
-                    <div class="left_ex_title">
-                        <h2>get in <span>touch</span></h2>
-                    </div>
-                    <form class="contact_us_form row m0" action="contact_process.php" method="post" id="contactForm"
-                        novalidate="novalidate">
-                        <div class="form-group col-md-12">
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Name">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <input type="text" class="form-control" id="number" name="number" placeholder="Phoen no.">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <textarea class="form-control" name="message" id="message" rows="1"
-                                placeholder="Message"></textarea>
-                        </div>
-                        <div class="form-group col-md-12">
-                            <button type="submit" value="submit" class="btn submit_btn form-control">submit now</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-6">
-                    <div class="right_contact_info">
-                        <div class="contact_info_title">
-                            <h3>Contact info</h3>
-                            <p>Have any Queries? Let us know. We will clear it for you at the best.</p>
-                        </div>
-                        <div class="contact_info_list">
-                            <div class="media">
-                                <div class="media-left">
-                                    <i class="fa fa-map-marker"></i>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Office</h4>
-                                    <p>Dandeli, Karnataka <br /> India, 581325</p>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <div class="media-left">
-                                    <i class="fa fa-envelope-o"></i>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Email</h4>
-                                    <a>book@bookmydandeli.com</a>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <div class="media-left">
-                                    <i class="fa fa-phone"></i>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Phone</h4>
-                                    <a>+ (91) 7676281511</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>Unveiling the Optimal Season to Explore Dandeli: A Comprehensive Traveler's Handbook</h2>
+                <p style="font-size:medium;">While Dandeli's charm is diverse and personal to each visitor, encompassing
+                    bird watching, river rafting, water adventures, and the wonders of wildlife and nature, the ideal
+                    time to indulge in these activities varies throughout the year. Here's our comprehensive guide to
+                    help you choose the best seasons to explore this Southern Indian paradise.
+
+                    <br><br> For utmost comfort during your stay, we advise carrying essentials such as moisturizer, lip
+                    balm,
+                    mosquito repellent, a Swiss Army knife, and a torch. Don't forget your chargers, power bank,
+                    batteries, hats, sunglasses, and a money belt. Opt for comfortable clothing and carry your
+                    essentials in a backpack as you venture into the wilderness. And if water sports are on your agenda,
+                    ensure you pack swimwear. To maintain the pristine environment, bring reusable bottles and a plastic
+                    bag to dispose of waste responsibly.
+
+                    <br><br> While most activities are weather-dependent, bird watching holds a unique aspect where
+                    other factors
+                    also influence your experience. Let's delve into the fascinating realm of bird watching before we
+                    unveil the best seasons to savor the splendor of Dandeli.
+                </p>
             </div>
         </div>
     </section>
-    <!--================End Get Contact Area =================-->
 
-    <!--================Map Area =================-->
-    <section class="contact_map_area">
+    <br>
+    <section class="activities_title">
         <div class="container">
-            <div id="mapBox2" class="mapBox2 row m0" data-lat="15.2667" data-lon="74.6167" data-zoom="12"
-                data-marker="img/map-marker.png" data-info="Dandeli, Karnataka, India." data-mlat="15.2667"
-                data-mlon="74.6167">
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>JANUARY-FEBRUARY-MARCH: IDEAL FOR BIRD WATCHING IN DANDELI</h2>
+                <p style="font-size:medium;">At this time of year, the weather is ideal for bird watching enthusiasts
+                    and trekkers. With the cooler winter setting in, it becomes particularly pleasant to walk through
+                    the greenery in search of elusive avian species.
+
+                    <br><br> Weather info:
+
+                    <br> January: 14 to 34 degrees Celsius
+                    <br> February: 14 to 34 degrees Celsius
+                    <br> March: 16 to 35 degrees Celsius
+                    <br> If bird watching is your ultimate objective for visiting Dandeli, January and February are the
+                    best
+                    months. You'll find a huge variety of birds during this time. Also, the weather is ideal for hiking
+                    and trekking.
+
+                    <br><br> So, you can simply grab your camera and backpack, and set out for an amazing time in the
+                    jungles of
+                    Dandeli.
+
+                    <br><br> Water can be seen in abundance during this time and it is the best time to visit Dandeli
+                    for river
+                    rafting. While whitewater rafting is offered during these months, you'll have to note that this
+                    activity depends entirely on water levels, which rely on the release of water from the nearby Supa
+                    Dam. Water is stored in the Supa Dam for power generation.
+
+                    <br><br> Tips for remaining comfortable:
+
+                    <br><br> Nights can be especially cold during this time.
+                    Ensure that you pack enough warm clothing instead of buying them in Dandeli, as finding jackets and
+                    sweaters can be tough and time-consuming.
+                    Stuff like moisturisers and lip balms can be bought in Dandeli if you forget to pack them.
+                </p>
             </div>
         </div>
     </section>
-    <!--================End Map Area =================-->
+
+    <br>
+    <section class="activities_title">
+        <div class="container">
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>APRIL-MAY-JUNE: THE RIGHT TIME TO VISIT DANDELI FOR WILDLIFE</h2>
+                <p style="font-size:medium;">Summer in Dandeli is the ultimate season for wildlife enthusiasts. The
+                    weather is pleasant with fewer crowds, meaning animals confidently venture out of hiding. Perfect
+                    for jungle safari & wildlife photography!
+
+                    <br><br> Weather info:
+
+                    <br> April: 22 to 39 degrees Celsius
+                    <br> May: 21 to 39 degrees Celsius
+                    <br> June: 20 to 27 degrees Celsius
+                    <br> Wildlife is always easier to spot when there is less vegetation and the climate is relatively
+                    dry.
+                    Animals are forced to venture out into the few spots that have an abundance of water.
+
+                    <br><br> The skies are clear most of the time, allowing for better visibility. There are also far
+                    fewer
+                    mosquitoes at this time of year. Since most people visit at the end of the year, the crowds are much
+                    thinner, except, of course, if there's a national holiday.
+
+                    <br><br> If you plan to venture out in the evening for an open-jeep safari, ensure that you carry
+                    warm
+                    clothing. As Dandeli is surrounded by dense forest, evenings can be quite cold. <br><br>
+                </p>
+            </div>
+        </div>
+    </section>
+    <!--================End Main Area =================-->
 
     <!--================Footer Area =================-->
     <footer class="footer_area">
@@ -302,70 +321,6 @@
     </footer>
     <!--================End Footer Area =================-->
 
-    <!--================Contact Success and Error message Area =================-->
-    <div id="success" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></span>
-                    <h2 class="modal-title">Thank you</h2>
-                    <p class="modal-subtitle">Your message is successfully sent...</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modals error -->
-
-    <!-- Error Message Modal -->
-    <div id="error" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></span>
-                    <h2 class="modal-title">Error</h2>
-                    <p class="modal-subtitle">There was an error processing your request. Please try again later.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!--================Search Box Area =================-->
-    <div class="search_area zoom-anim-dialog mfp-hide" id="test-search">
-        <div class="search_box_inner">
-            <h3>Search</h3>
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="button"><i class="icon icon-Search"></i></button>
-                </span>
-            </div>
-        </div>
-    </div>
-    <!--================End Search Box Area =================-->
-
-    <div id="error" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></span>
-                    <h2 class="modal-title">Sorry !</h2>
-                    <p class="modal-subtitle"> Something went wrong </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--================End Contact Success and Error message Area =================-->
-
-
-
-
-
-
     <!--================End Footer Area =================-->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-2.2.4.js"></script>
@@ -393,18 +348,11 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
     <script src="js/gmaps.min.js"></script>
 
-    <!-- contact js -->
-    <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/contact.js"></script>
-
     <!-- instafeed-->
     <script type="text/javascript" src="vendors/instafeed/instafeed.min.js"></script>
     <script type="text/javascript" src="vendors/instafeed/script.js"></script>
 
     <script src="js/theme.js"></script>
 </body>
-
-<!-- Mirrored from designarc.biz/demos/hilltown/theme/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jul 2023 05:50:58 GMT -->
 
 </html>
