--- a/wildlife-sanctuary.html
+++ b/wildlife-sanctuary.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from designarc.biz/demos/hilltown/theme/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jul 2023 05:50:57 GMT -->
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,11 +8,13 @@
 
     <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Contact Us</title>
+    <title>wildlife Sanctuary</title>
 
     <!-- Icon css link -->
+    <link rel="stylesheet" type="text/css" href="akcodewala.com/css_root/flaticon.css">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="vendors/stroke-icon/style.css" rel="stylesheet">
+    <link href="vendors/flat-icon/flaticon.css" rel="stylesheet">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -29,6 +29,7 @@
     <link href="vendors/owl-carousel/owl.carousel.min.css" rel="stylesheet">
     <link href="vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css" rel="stylesheet">
     <link href="vendors/bootstrap-selector/bootstrap-select.css" rel="stylesheet">
+    <link href="vendors/lightbox/simpleLightbox.css" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
@@ -134,100 +135,124 @@
     <!--================Header Area =================-->
 
     <!--================Banner Area =================-->
-    <section class="banner_area_contactus">
+    <section class="banner_area_aboutdandeli">
         <div class="container">
             <div class="banner_inner_content">
-                <h3>Contact Us</h3>
+                <h3>Wildlife Sanctuary</h3>
                 <ul>
                     <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="contact-us.html">Contact Us</a></li>
+                    <li><a href="wildlife-sanctuary.html">wildlife Sanctuary</a></li>
                 </ul>
             </div>
         </div>
     </section>
     <!--================End Banner Area =================-->
 
-
-    <!--================Get Contact Area =================-->
-    <section class="get_contact_area">
+    <!--================Start Main Area =================-->
+    <br>
+    <section class="activities_title">
         <div class="container">
-            <div class="row get_contact_inner">
-                <div class="col-md-6">
-                    <div class="left_ex_title">
-                        <h2>get in <span>touch</span></h2>
-                    </div>
-                    <form class="contact_us_form row m0" action="contact_process.php" method="post" id="contactForm"
-                        novalidate="novalidate">
-                        <div class="form-group col-md-12">
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Name">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <input type="text" class="form-control" id="number" name="number" placeholder="Phoen no.">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <textarea class="form-control" name="message" id="message" rows="1"
-                                placeholder="Message"></textarea>
-                        </div>
-                        <div class="form-group col-md-12">
-                            <button type="submit" value="submit" class="btn submit_btn form-control">submit now</button>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-6">
-                    <div class="right_contact_info">
-                        <div class="contact_info_title">
-                            <h3>Contact info</h3>
-                            <p>Have any Queries? Let us know. We will clear it for you at the best.</p>
-                        </div>
-                        <div class="contact_info_list">
-                            <div class="media">
-                                <div class="media-left">
-                                    <i class="fa fa-map-marker"></i>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Office</h4>
-                                    <p>Dandeli, Karnataka <br /> India, 581325</p>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <div class="media-left">
-                                    <i class="fa fa-envelope-o"></i>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Email</h4>
-                                    <a>book@bookmydandeli.com</a>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <div class="media-left">
-                                    <i class="fa fa-phone"></i>
-                                </div>
-                                <div class="media-body">
-                                    <h4>Phone</h4>
-                                    <a>+ (91) 7676281511</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>ABOUT DANDELI WILDLIFE SANCTUARY</h2>
+                <p style="font-size:medium;">Immerse yourself in the enchanting ambiance of Dandeli's lush forests on an
+                    exhilarating wildlife safari. Accompanied by experienced guides, venture into the heart of nature's
+                    abode, encountering a captivating array of wild animals, exotic birds, and unique reptiles.
+
+                    <br><br> Journey through scenic wooded trails, relishing the vibrant tapestry of plant and animal
+                    life
+                    as the
+                    landscape's colors, scents, and textures unfold in all their splendor.
+
+                    <br><br> the esteemed 'Who's Who' of exotic creatures, the inhabitants of Dandeli Wildlife Sanctuary
+                    reign
+                    supreme! Witness elephants, wild pigs, tigers, elusive black panthers, wild dogs, monkeys, deer, and
+                    mongoose, among other fascinating mammals during your sojourn.
+
+                    <br><br> For adventure enthusiasts, Dandeli beckons as a haven for the perfect holiday escapade or
+                    weekend
+                    getaway. Whether it's thrilling white-water rafting on the Kali River, adventurous mountain biking
+                    through hilly terrains, or the rare opportunity to spot tigers and unique bird species, Dandeli
+                    promises to appease your soul amidst the lap of nature. <br>
+                </p>
             </div>
         </div>
     </section>
-    <!--================End Get Contact Area =================-->
 
-    <!--================Map Area =================-->
-    <section class="contact_map_area">
+    <br>
+    <section class="activities_title">
         <div class="container">
-            <div id="mapBox2" class="mapBox2 row m0" data-lat="15.2667" data-lon="74.6167" data-zoom="12"
-                data-marker="img/map-marker.png" data-info="Dandeli, Karnataka, India." data-mlat="15.2667"
-                data-mlon="74.6167">
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>Keep an eye out for some of the extraordinary mammals residing in the Dandeli Wildlife Sanctuary.
+                </h2>
+                <p style="font-size:medium;">Sloth Bears exhibit an intriguing appearance with their lack of upper
+                    incisor teeth, yet possessing a long tongue, which they skillfully employ to indulge in their
+                    favorite treat - termites! Their unique features enable them to consume copious amounts of termites
+                    with ease, using their inward-turning feet and long claws to dig at termite hills. Additionally,
+                    they display a diverse diet, feasting on insects, birds' eggs, honey, and even climbing trees to
+                    reach fruit.
+
+                    <br><br> Barking Deer, with their unobtrusive presence in the sanctuary, often go unnoticed, except
+                    for their
+                    calls that strikingly resemble a dog's bark. These solitary and timid creatures are usually seen
+                    alone or in pairs, rather than in groups. Patience and silence are key when attempting to capture
+                    their elusive essence through photography.
+
+                    <br><br> The Indian Pangolin, an extraordinary ant-eating marvel, dons a knight-like appearance due
+                    to its
+                    overlapping scales, reminiscent of Medieval armor. These unique scales are actually compressed
+                    hairs, intricately arranged. Sharing a preference for termites and ants with the Sloth Bear, the
+                    Pangolin utilizes its long claws to unearth its favorite delicacies. To defend against predators
+                    like tigers, the Pangolin curls into a protective ball, relying on its scales for safety.
+
+                    <br><br> Meet the Malabar Giant Squirrel, known as Ratufa Indica, roughly the size of a small dog,
+                    boasting a
+                    tail that matches the length of its body. Shy by nature, this creature employs an ingenious survival
+                    tactic by flattening itself against a tree branch, blending seamlessly with the surrounding foliage
+                    when it senses danger. Its coloration varies from predominantly black to mixed red and black or
+                    off-white. To catch a glimpse of this elusive beauty, remain motionless and keep a keen eye on the
+                    nearest tree. <br>
+                </p>
             </div>
         </div>
     </section>
-    <!--================End Map Area =================-->
+
+    <br>
+    <section class="activities_title">
+        <div class="container">
+            <div class="resort_title" style="padding-top: 5vh; padding-bottom: 0px;">
+                <h2>Discover the Enchanting Flora and Fauna of Dandeli: A Haven for Bird Watchers
+                </h2>
+                <p style="font-size:medium;">The lush forest of Dandeli is an enchanting canvas adorned with a vibrant
+                    array of colors, a harmonious blend of deciduous and evergreen trees, including bamboo and teak
+                    plantations. Nourished by the bountiful fruit-bearing trees, the area becomes a haven for 196
+                    species of birds, while the plants themselves hold reverence for their potent healing and medicinal
+                    properties. Take, for instance, the Kydia Clycina, whose leaves provide relief from muscular aches
+                    and pains.
+
+                    <br><br> Within this ecological wonderland, several captivating bird species find their abode, such
+                    as the
+                    majestic Great Pied Hornbill, the resplendent Blue-Throated Barbet, the Peregrine Falcon, and the
+                    intriguing Malabar Pied Hornbill. The latter, with its distinctive yellow beak adorned with a hard,
+                    helmet-like bump known as a 'casque,' adds an air of curiosity to the avian spectacle.
+
+                    <br><br> Beyond its natural allure, Dandeli embraces a diverse population, including a significant
+                    number of
+                    migrant workers from various corners of India, particularly from Uttar Pradesh, Bihar, Rajasthan,
+                    and Madhya Pradesh, drawn to its thriving paper mills, seeking livelihood opportunities. The
+                    linguistic tapestry of Dandeli shines brightly, with Kannada, Hindi, Marathi, and Konkani widely
+                    spoken, earning the city the endearing moniker of "Mini India."
+
+                    <br><br> Besides its verdant forests and thrilling adventure activities, Dandeli boasts a treasure
+                    trove of
+                    historical monuments and religious landmarks. From the revered Ulavi temple to the imposing Supa
+                    Hydraulic Dam, the ancient caves of Kavla, and the captivating Syntheri Rocks, every step uncovers a
+                    treasure worth etching in one's cherished memories forever. <br><br>
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!--================End Main Area =================-->
 
     <!--================Footer Area =================-->
     <footer class="footer_area">
@@ -302,70 +327,6 @@
     </footer>
     <!--================End Footer Area =================-->
 
-    <!--================Contact Success and Error message Area =================-->
-    <div id="success" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></span>
-                    <h2 class="modal-title">Thank you</h2>
-                    <p class="modal-subtitle">Your message is successfully sent...</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modals error -->
-
-    <!-- Error Message Modal -->
-    <div id="error" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></span>
-                    <h2 class="modal-title">Error</h2>
-                    <p class="modal-subtitle">There was an error processing your request. Please try again later.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!--================Search Box Area =================-->
-    <div class="search_area zoom-anim-dialog mfp-hide" id="test-search">
-        <div class="search_box_inner">
-            <h3>Search</h3>
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="button"><i class="icon icon-Search"></i></button>
-                </span>
-            </div>
-        </div>
-    </div>
-    <!--================End Search Box Area =================-->
-
-    <div id="error" class="modal modal-message fade" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></span>
-                    <h2 class="modal-title">Sorry !</h2>
-                    <p class="modal-subtitle"> Something went wrong </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--================End Contact Success and Error message Area =================-->
-
-
-
-
-
-
     <!--================End Footer Area =================-->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-2.2.4.js"></script>
@@ -393,18 +354,11 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
     <script src="js/gmaps.min.js"></script>
 
-    <!-- contact js -->
-    <script src="js/jquery.form.js"></script>
-    <script src="js/jquery.validate.min.js"></script>
-    <script src="js/contact.js"></script>
-
     <!-- instafeed-->
     <script type="text/javascript" src="vendors/instafeed/instafeed.min.js"></script>
     <script type="text/javascript" src="vendors/instafeed/script.js"></script>
 
     <script src="js/theme.js"></script>
 </body>
-
-<!-- Mirrored from designarc.biz/demos/hilltown/theme/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 17 Jul 2023 05:50:58 GMT -->
 
 </html>
